changes some code for about section

--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Pattaya&family=Roboto:wght@100&display=swap" rel="stylesheet">
+
+
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;500&display=swap" rel="stylesheet">
     <title>Portfolio</title>
 </head>
 <body>
@@ -24,11 +30,11 @@
                         <div class="typer-section">
                             <div>
                                 <div>
-                                    <span class = "hey">Hey! I am</span><br><br><span class = "name">Chirag Singh</span><br><br>
+                                    Hey! I'm 
+                                    <br><span class = "name">Chirag Singh</span><br><br>
+                                    I'm a Pre-final year student who is interested in:<br><br>
                                 </div>
-                                <div>
-                                    I like <div class="typer"></div>
-                                </div> 
+                                 <div class="typer"></div> 
                             </div>
                         </div>
                     </div>
