--- a/index.html
+++ b/index.html
@@ -14,9 +14,18 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;500&display=swap" rel="stylesheet">
+    
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"/>
     <title>Portfolio</title>
 </head>
 <body>
+    <div class="wrapper">
+        <div class="wrapper-nav">
+            <div class="wrapper-close">
+                <span class="material-icons">close</span>
+            </div>
+        </div>
+    </div>
     <div class="container">
         <div id="about-me" class="section">
             <div class="about-content">
@@ -37,6 +46,11 @@
                                  <div class="typer"></div> 
                             </div>
                         </div>
+                    </div>
+                    <div class="resume-section">
+                        <div class="resume"><span class="material-icons">
+                            download
+                            </span>MyResume.pdf</div>
                     </div>
                 </div>
             </div>
