--- a/index.html
+++ b/index.html
@@ -77,10 +77,8 @@
                 <div class="card-section">
                     <div class="card">
                         <div class="card-front">
-                            <span class="material-icons">
-                                school
-                            </span>
-                            
+                            <div class="clg-card-img"></div>
+                            <br>
                             <div>
                                 GRADUATION
                             </div>
@@ -118,9 +116,8 @@
                 <div class="card-section">
                     <div class="card">
                         <div class="card-front">
-                            <span class="material-icons">
-                                history_edu
-                                </span>
+                                <div class="inter-card-img"></div>
+                                <br>
                                 <div>
                                     INTERMEDIATE
                                 </div>
@@ -159,9 +156,8 @@
                 <div class="card-section">
                     <div class="card">
                         <div class="card-front">
-                            <span class="material-icons">
-                                history_edu
-                                </span>
+                            <div class="high-school-card-img"></div>
+                            <br>
                                 <div>
                                     HIGH SCHOOL
                                 </div>
