Completed design of Skills

--- a/index.html
+++ b/index.html
@@ -210,6 +210,119 @@
         </div>
         <div id="skills" class="section">
             <div class="empty"></div>
+            <div class="skills-content">
+
+                <div class="skill">
+                    <div class="skill-detail">
+                        <div class="skill-name-section">
+                            <img src="Images/Python_Logo.png" height="50" width="50" alt="">
+                            <div class="skill-name">
+                                Python
+                            </div>
+                        </div>
+                    </div>
+                    <div class="skill-knowledge">
+                        <div class="skill-progress">
+                            <div class="skill-progress-main" style="width: 90%;">
+                                90%
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="skill">
+                    <div class="skill-detail">
+                        <div class="skill-name-section">
+                            <img src="Images/Java_Logo.png" height="60" width="60" alt="">
+                            <div class="skill-name">
+                                Java
+                            </div>
+                        </div>
+                    </div>
+                    <div class="skill-knowledge">
+                        <div class="skill-progress">
+                            <div class="skill-progress-main" style="width: 90%;">
+                                90%
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="skill">
+                    <div class="skill-detail">
+                        <div class="skill-name-section">
+                            <img src="Images/NodeJS_Logo.png" height="50" width="50" alt="">
+                            <div class="skill-name">
+                                NodeJS
+                            </div>
+                        </div>
+                    </div>
+                    <div class="skill-knowledge">
+                        <div class="skill-progress">
+                            <div class="skill-progress-main" style="width: 90%;">
+                                90%
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="skill">
+                    <div class="skill-detail">
+                        <div class="skill-name-section">
+                            <img src="Images/HTML_Logo.svg" height="50" width="50" alt="">
+                            <div class="skill-name">
+                                HTML
+                            </div>
+                        </div>
+                    </div>
+                    <div class="skill-knowledge">
+                        <div class="skill-progress">
+                            <div class="skill-progress-main" style="width: 90%;">
+                                90%
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="skill">
+                    <div class="skill-detail">
+                        <div class="skill-name-section">
+                            <img src="Images/CSS_Logo.png" height="60" width="60" alt="">
+                            <div class="skill-name">
+                                CSS
+                            </div>
+                        </div>
+                    </div>
+                    <div class="skill-knowledge">
+                        <div class="skill-progress">
+                            <div class="skill-progress-main" style="width: 90%;">
+                                90%
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="skill">
+                    <div class="skill-detail">
+                        <div class="skill-name-section">
+                            <img src="Images/JS_Logo.png" height="50" width="50" alt="">
+                            <div class="skill-name">
+                                JavaScript
+                            </div>
+                        </div>
+                    </div>
+                    <div class="skill-knowledge">
+                        <div class="skill-progress">
+                            <div class="skill-progress-main" style="width: 90%;">
+                                90%
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                
+
+            </div>            
         </div>
         <div id="links" class="section">
             <div class="empty"></div>
